# llmcord

./: .gitignore  Cargo.toml  README.md  shell.nix
.github/workflows/: ci.yml
src/: ai.rs  cancel.rs  config.rs  constant.rs  generation.rs  handler.rs  main.rs  outputter.rs  util.rs
src/commands/: execute.rs  hallucinate.rs  mod.rs
src/commands/execute/: app.rs  mod.rs  slash.rs
src/commands/execute/extensions/: globals.rs  llm.rs  mod.rs
