[package]
description = "A Discord bot, written in Rust, that generates responses through an OpenAI-compliant API."
edition = "2021"
license = "GPL-3.0-only"
name = "llmcord"
version = "0.2.0"

[dependencies]
anyhow = "1.0.66"
async-openai = "0.28"
flume = "0.10"
serde = { version = "1.0.150", features = ["derive"] }
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
    "collector",
] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.7.3"
thiserror = "1.0"
